--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             required
             maxlength="15" 
             type="text" 
-            placeholder="">
+            >
             <p id="tiny-text">이름을 입력한 후, 엔터를 눌러주세요</p>
         </form>
 
@@ -25,7 +25,7 @@
         <h2 id="clock" class="hidden">00:00:00</h2>
         <form id="todo-form" class="hidden">
             <p>What is your main focus for today?</p>
-            <input required type="text" placeholder="">
+            <input required type="text" maxlength="15">
         </form>
 
         <ul id="todo-list">
